# MemoryEnhancedMultiAgent

./: .gitignore  ARCHITECTURE.md  Makefile  README.md  ROADMAP.md  WIZARD_SPEC.md  brain.py  builder.py  fact_checker.py  guardian.py  install.sh  pyproject.toml  requirements.txt  researcher.py
agents/: session_manager.py
agents/brain/: __init__.py  brain.py  project_manager.py  spec_writer.py  task_decomposer.py
agents/builder/: __init__.py  builder.py
agents/common/: activity_log.py  base_agent.py  config.py  content_tags.py  db_helper.py  errors.py  gitops.py  llm_client.py  protocol.py  retry.py  secret_scanner.py  sub_agent.py  usage_tracker.py  web_search.py
agents/fact_checker/: __init__.py  fact_checker.py
agents/guardian/: __init__.py  guardian.py
agents/investigator/: __init__.py  investigator.py
agents/judge/: __init__.py  judge.py
docs/: AUDIT.md  DEBUG_CHECKLIST.md  KIMI_API_RESEARCH.md  WIZARD_SPEC.md
memory/: __init__.py  chunker.py  consolidation.py  dedup.py  embeddings.py  engine.py  graduation.py  knowledge_cache.py  knowledge_refresh.py  retrieval.py  schemas.py  scoring.py
scripts/: morning_brief.py  rotate_logs.sh
tests/: test_e2e_install.sh  test_graduation.py  test_guardian_expanded.py  test_idea_surfacer.py  test_integration.py  test_morning_brief.py  test_project_manager.py  test_prompt_injection.py  test_usage_activity.py
wizard/: utils.sh  wizard.sh
wizard/steps/: 01_prerequisites.sh  02_openclaw_install.sh  04_user_identity.sh  04b_tech_stack.sh  05_brain_personality.sh  10_tools.sh  (+5 more)
workspace-templates/: AGENTS.md
